--- a/package.json
+++ b/package.json
@@ -52,7 +52,9 @@
     "react-dev-utils": "^9.1.0",
     "react-dom": "^16.11.0",
     "react-loadable": "^5.5.0",
+    "react-redux": "^7.1.1",
     "react-router-dom": "^5.1.2",
+    "redux": "^4.0.4",
     "resolve": "1.12.0",
     "resolve-url-loader": "3.1.0",
     "sass-loader": "7.2.0",
